Fixed spacing on my face

--- a/style.css
+++ b/style.css
@@ -45,14 +45,14 @@ header {
   background-color: #999;
   background-image: url(img/background.jpg);
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center -220px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   margin-bottom: 4em;
   text-align: center;
-  height: 500px;
+  height: 1000px;
  
 }
 
